# cara-dev

./: .gitignore  README.md  cara_offsets.yaml  docker-compose.yml
app/: cara_main.py  head_controller.py  serial_control.py  test.py  zero_point_calibration_test.py
app/cara_memory/: cara_summarizer.py
arduino/: arduino.ino  arduino_test.py  test.py  test_serial.py
arduino/a/emotion/: emotion.ino
arduino/head/: head.ino
configs/: cara_controllers.yaml  ost.yaml
docs/: body.md  daisy_chain.md  design.md  emotion.md  imu.md  training.md  understanding.md  urdf_notes.md  wiring.md  xacro_notes.md
isaac/: config.yaml  deployment.py  locomotion.py  stability_test.py  training.py
media/videos/: cara_walk_mesh.webm
ros2_ws/: 20_servos.pu
ros2_ws/sensors/: imu_integration.py
ros2_ws/src/cara_body_control/: cara_actuator_node.py  cara_body_node.py
ros2_ws/src/cara_bringup/launch/: cara_stack.launch.py
ros2_ws/src/cara_gaze_control/: setup.py
ros2_ws/src/cara_health_monitor/: health_monitor.py
ros2_ws/src/cara_motion_control/: notes  package.xml  setup.cfg  setup.py
ros2_ws/src/cara_motion_control/cara_motion_control/: cara_body_node.py  head_expression_node.py
ros2_ws/src/cara_motion_control/launch/: calibrate_launch.py  calibration_arviz.py  cara_launch.py  launch.py  visualize_cara.launch.py
ros2_ws/src/cara_motion_control/urdf/: cara.urdf  cara_limited.urdf
ros2_ws/src/cara_motion_control/urdf/meshes/: cara_main.urdf
ros2_ws/src/cara_vision_control/: setup.py
training/: config.py
urdf/: cara.urdf.xacro  wristtorso.urdf.xacro
(+14 files in other folders)
